--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,41 +3,27 @@ name: Laravel
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-
-    services:
+    
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.0'
 
     - uses: actions/checkout@v3
+    
+    - name: Run composer install
+      run: composer install -n --prefer-dist
 
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
-    - name: Update Composer Dependencies
-      run: composer update
-
-    - name: Clear Composer Cache
-      run: composer clear-cache
-
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
-    - name: Generate key
-      run: php artisan key:generate
-
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-
-    - name: Create Database
+    - name: Prepare Laravel ENV
       run: |
-        php artisan migrate --seed --force
+          cp .env.ci .env
+          php artisan key:generate
+
+    - name: Run artisan tests
+      run: php artisan test
 
 
