--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
         php-version: '8.0'
 
     - uses: actions/checkout@v3
+
+    - name: Update Composer Dependencies
+      run: composer update
     
     - name: Run composer install
       run: composer install -n --prefer-dist
